# support

./: .gitignore  AGENTS.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
docs/architecture/: cli.md  evidence-retention-upload-policy.md  os-adapters.md  production-customer-support.md
docs/contracts/: support-to-networking.md  support-to-security.md
docs/runbooks/macos/: ssh-production.md
docs/runbooks/ubuntu/: ssh-production.md
docs/runbooks/windows/: openssh-production.md  support-demo.md
scripts/macos/: README.md
scripts/ubuntu/: README.md
scripts/windows/: README.md
scripts/windows/diagnostics/: crash-check.ps1
scripts/windows/offboarding/: windows-ssh-offboard.ps1
scripts/windows/onboarding/: customer-ssh-bootstrap.ps1  join.ps1  windows-ssh-onboard.ps1
scripts/windows/runner/: run-verified.ps1
supportctl/: __init__.py  cli.py
tests/: test_supportctl.py
worker/: build.py  deploy.sh  index.js
